# jambhala

./: .envrc  .ghci  .gitignore  .gitmodules  .justfile  LICENSE  README.md  README_TEMPLATE.md  cabal.project  cabal.project.local  direnv-setup.sh  flake.nix  jambhala.cabal  ready?
app/: Main.hs
assets/addr/: .gitignore
assets/scripts/native/: .gitignore
assets/tx/: .gitignore
backups/: Haskell-leg.hs
cardano-cli/: ada  addr  calc-slot  install-node  key-gen  key-hash  keygen  min-ada  min-fee  params  policyid  run-node  script-addr  tip  token  token-name  transfer  tx-assemble  tx-hash  tx-sign  tx-submit  tx-view  tx-witness  utxos
cardano-cli/tutorial/: 00-installation.md  01-simple-transfer.md  02-build-raw.md  03-multi-witness.md  04-multisig-script.md  05-metadata.md  06-native-tokens.md
devnet/config/credentials/: faucet.addr
devnet/config/genesis/: cardano-node.json  genesis-shelley.json
j-cli/: Main.hs
keys/: .gitignore
scripts/: bech32  build  build-and-serve-docs  check-env  fix-submodules.sh  install-node  j  jamb  jambhalucid  jbuild  jcode  jdevnet  jlucid  jrebuild  jrepl  jupdate  keygen  pa-history  rebuild  refresh  reset-vars  run-node  serve-docs  setup  setup.sh  update  utxos
setup/: check_env.py  install-node  jsetup  readiness_test.py
src/: CLI.hs  Contracts.hs  Prelude.hs  Utils.hs
src/CLI/: Parsers.hs  Update.hs
src/Contracts/: Contracts.hs  MySimple.hs  ParamVesting.hs  README.md  Simple.hs  SimpleTyped.hs
src/Contracts/Samples/: Auction.hs  CustomTyped.hs  ForwardMinting.hs  FreeMinting.hs  Guess.hs  NFT.hs  ParamVesting.hs  Parameterized.hs  SignedMinting.hs  Simple.hs  SimpleGuessing.hs  SimpleTyped.hs  StateCounter.hs  Vesting.hs
src/Contracts/Samples/READMEs/: ForwardMinting.md  StateCounter.md
src/Jambhala/: CLI.hs  Haskell.hs  Plutus.hs  Utils.hs
src/Jambhala/CLI/: Bech32.hs  Emulator.hs  Export.hs  Parsers.hs  Types.hs  Update.hs
src/Jambhala/CLI/Emulator/: Types.hs
src/Jambhala/CLI/Update/: Parsers.hs
src/Utils/: CLI.hs  Parsers.hs  Scripts.hs  Utils.hs
