cabal-version: 3.0
name:          jambhala
version:       0.5.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

license:       MIT
license-file:  LICENSE
author:        Ian Burzynski
maintainer:    23251244+iburzynski@users.noreply.github.com

flag defer-plugin-errors
  description:
    Defer errors from the plugin, useful for things like Haddock that can't handle it.

  default:     False
  manual:      True

common common
  default-language: Haskell2010
  build-depends:    base ^>=4.14.3.0
  mixins:           base hiding (Prelude)
  ghc-options:
    -Wall -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr
    -fno-specialise -Wno-orphans -Wno-unused-local-binds

  if flag(defer-plugin-errors)
    ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

library
  import:             common
  exposed-modules:
    Contracts
    Jambhala.CLI
    Jambhala.Plutus
    Jambhala.Utils
    Prelude

  -- Add new contracts here, i.e.:
  -- Contracts.MyContract

  other-modules:
    Contracts.Samples.Auction
    Contracts.Samples.CustomTyped
    Contracts.Samples.ForwardMinting
    Contracts.Samples.FreeMinting
    Contracts.Samples.NFT
    Contracts.Samples.ParamVesting
    Contracts.Samples.SignedMinting
    Contracts.Samples.Simple
    Contracts.Samples.SimpleGuessing
    Contracts.Samples.SimpleTyped
    Contracts.Samples.StateCounter
    Contracts.Samples.Vesting
    Jambhala.CLI.Bech32
    Jambhala.CLI.Emulator
    Jambhala.CLI.Emulator.Types
    Jambhala.CLI.Export
    Jambhala.CLI.Parsers
    Jambhala.CLI.Types
    Jambhala.CLI.Update
    Jambhala.CLI.Update.Parsers

  -- Sample contracts:
  hs-source-dirs:     src
  build-depends:
    , aeson
    , base16-bytestring
    , bech32
    , bytestring
    , cardano-api
    , cardano-binary
    , cardano-ledger-core
    , cardano-node-emulator
    , containers
    , data-default
    , extra
    , foldl
    , freer-extras
    , freer-simple
    , lens
    , megaparsec
    , memory
    , mtl
    , optparse-applicative
    , plutus-contract
    , plutus-core
    , plutus-ledger
    , plutus-ledger-api
    , plutus-script-utils
    , plutus-tx
    , plutus-tx-constraints
    , plutus-tx-plugin
    , row-types
    , serialise
    , text
    , time
    , transformers
    , turtle

  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    FlexibleInstances
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TemplateHaskell
    TypeApplications
    TypeFamilies
    TypeOperators

executable cli
  import:         common
  main-is:        Main.hs
  hs-source-dirs: j-cli
  ghc-options:    -Werror -threaded -rtsopts -with-rtsopts=-T
  build-depends:  jambhala
